Revert "Bug #01: Video banner not responsive"

--- a/styles/main.css
+++ b/styles/main.css
@@ -68,6 +68,7 @@ h2 {
 HEADER STYLES
 ======================*/
 header {
+	position: fixed;
     width: 100%; 
     display: flex;
     align-items: center;
@@ -179,9 +180,10 @@ BURGER STYLES
 /*====================
 BANNER STYLES
 ======================*/
-.video {
+.bnr .video {
 	z-index: -1;
-	width: 100vw;
+	width: 100%;
+	height: 100%;
 }
 
 .welcome {
